# minimal_cmake_example

./: CMakeLists.txt  README.md
resources/: resource1
src/main/: main.cpp  main.h
src/test/: test.cpp
